--- a/style.css
+++ b/style.css
@@ -3,3 +3,48 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
+
+#grid {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: auto;
+  border: 5px solid black;
+  margin: 20px 20px;
+}
+
+#grid > div {
+  flex: 0 0 calc(100% / 16);
+  height: 80px;
+  border: 0.3px solid black;
+  background-color: lightgray;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 8px;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #45a049;
+}
