--- a/style.css
+++ b/style.css
@@ -5,34 +5,23 @@
 }
 
 body {
+  background: linear-gradient(
+    to bottom,
+    rgba(247, 247, 205, 1) 0%,
+    rgba(247, 247, 205, 0) 100%
+  );
+  font-family: "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100vh;
-}
-
-#grid {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  height: auto;
-  border: 5px solid black;
-  margin: 20px 20px;
-}
-
-#grid > div {
-  flex: 0 0 calc(100% / 16);
-  height: 80px;
-  border: 0.3px solid black;
-  background-color: lightgray;
-  box-sizing: border-box;
+  align-items: center;
+  text-align: center;
 }
 
 button {
   background-color: #4caf50;
   border: none;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   color: white;
   padding: 15px 32px;
   text-align: center;
@@ -47,4 +36,29 @@ button {
 
 button:hover {
   background-color: #45a049;
+}
+
+#grid {
+  background: linear-gradient(
+    to bottom,
+    rgba(245, 245, 240, 0.986) 0%,
+    rgba(247, 247, 205, 0) 100%
+  );
+  margin: 20px auto;
+  display: flex;
+  flex-wrap: wrap;
+  width: 70%;
+  height: auto;
+  border: 55px solid rgba(255, 0, 0, 0.767);
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+#grid > div {
+  flex: 0 0 calc(100% / 16);
+  width: 50px;
+  height: 50px;
+  border: none;
+  transition: background-color 0.3s;
+  box-sizing: border-box;
 }
