--- a/style.css
+++ b/style.css
@@ -15,20 +15,20 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
+  min-height: 100vh;
 }
 
 button {
   background-color: #4caf50;
   border: none;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: 10px;
   cursor: pointer;
   border-radius: 8px;
   transition: background-color 0.3s;
@@ -39,26 +39,19 @@ button:hover {
 }
 
 #grid {
-  background: linear-gradient(
-    to bottom,
-    rgba(245, 245, 240, 0.986) 0%,
-    rgba(247, 247, 205, 0) 100%
-  );
   margin: 20px auto;
   display: flex;
   flex-wrap: wrap;
   width: 70%;
-  height: auto;
   border: 55px solid rgba(255, 0, 0, 0.767);
-  border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 15px;
 }
 
 #grid > div {
-  flex: 0 0 calc(100% / 16);
-  width: 50px;
-  height: 50px;
-  border: none;
+  background-color: white;
+  /*box-shadow: inset 0px 0px 5px 1px rgba(0, 0, 0, 0.6);*/
+  box-shadow: inset 0px 0px 6px 2px black;
   transition: background-color 0.3s;
-  box-sizing: border-box;
+  margin: 0;
+  flex: 0 1 calc(100% / 16);
 }
