--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -13,13 +13,13 @@ body {
   font-family: "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   min-height: 100vh;
 }
 
 button {
-  background-color: #4caf50;
+  background: #4caf50;
   border: none;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
   color: white;
@@ -35,23 +35,29 @@ button {
 }
 
 button:hover {
-  background-color: #45a049;
+  background: #45a049;
 }
 
 #grid {
   margin: 20px auto;
-  display: flex;
-  flex-wrap: wrap;
-  width: 70%;
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
   border: 55px solid rgba(255, 0, 0, 0.767);
   border-radius: 15px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 1);
 }
 
 #grid > div {
-  background-color: white;
-  /*box-shadow: inset 0px 0px 5px 1px rgba(0, 0, 0, 0.6);*/
-  box-shadow: inset 0px 0px 6px 2px black;
-  transition: background-color 0.3s;
+  background: white;
   margin: 0;
-  flex: 0 1 calc(100% / 16);
+  padding: 0;
+  border: 0 5px 15px rgba(0, 0, 0, 1);
+  box-shadow: inset 0.5px 0.5px 4px rgba(0, 0, 0, 0.5);
+  transition: background-color 0.3s;
+}
+
+#grid-size-info {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 10px 0;
 }
